deploy: b269a0d64399908cca6b673747d59babf5c0f9bb

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -49,10 +49,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.333310Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.332818Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.390816Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.390223Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.191041Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.190558Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.243669Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.243108Z"
     },
     "hide-output": false
    },
@@ -81,10 +81,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.394857Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.394315Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.396966Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.396438Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.247409Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.246961Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.248635Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.248964Z"
     },
     "hide-output": false
    },
@@ -106,10 +106,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.402597Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.401483Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.403175Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.403602Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.253630Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.252911Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.254463Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.254779Z"
     },
     "hide-output": false
    },
@@ -131,10 +131,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.429435Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.428106Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.431874Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.431412Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.275867Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.275095Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.278152Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.277757Z"
     },
     "hide-output": false
    },
@@ -157,10 +157,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.436610Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.435451Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.438351Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.437916Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.281705Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.280985Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.283042Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.283354Z"
     }
    },
    "outputs": [
@@ -190,10 +190,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.442971Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.441835Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.444653Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.444223Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.286975Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.286256Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.288599Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.288253Z"
     },
     "hide-output": false
    },
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labels: {'done', 'three', 'two', 'six', 'deadlock', 'four', 'init', 'one', 'five'}\n"
+      "Labels: {'deadlock', 'five', 'done', 'one', 'two', 'four', 'init', 'six', 'three'}\n"
      ]
     }
    ],
@@ -254,10 +254,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.449149Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.448013Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.449780Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.450180Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.292076Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.291377Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.292883Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.293197Z"
     },
     "hide-output": false
    },
@@ -283,10 +283,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.472104Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.470837Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.473836Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.473389Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.311286Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.310426Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.312887Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.312510Z"
     },
     "hide-output": false
    },
@@ -317,10 +317,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.478537Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.477414Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.480314Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.479874Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.316373Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.315674Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.317650Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.317960Z"
     },
     "hide-output": false
    },
@@ -382,10 +382,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.500126Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.499561Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.501908Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.501480Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.335068Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.333933Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.335570Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.335906Z"
     },
     "hide-output": false
    },
@@ -409,10 +409,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.506152Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.505023Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.506735Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.507134Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.339267Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.338538Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.340409Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.340030Z"
     },
     "hide-output": false
    },
@@ -439,10 +439,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.511846Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.510664Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.513622Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.513170Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.343986Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.343269Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.345286Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.345623Z"
     },
     "hide-output": false
    },
@@ -484,10 +484,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.534776Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.533476Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.535410Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.535827Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.363005Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.362154Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.363976Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.363598Z"
     },
     "hide-output": false
    },
@@ -511,10 +511,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.540583Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.539331Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.542316Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.541839Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.367474Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.366759Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.368788Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.369105Z"
     },
     "hide-output": false
    },
@@ -544,10 +544,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.549713Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.548535Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.551480Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.550997Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.374462Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.372157Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.376030Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.376369Z"
     },
     "hide-output": false
    },
@@ -599,10 +599,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.555056Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.554559Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.558076Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.557636Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.379572Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.378873Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.380717Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.380337Z"
     },
     "hide-output": false
    },
@@ -624,10 +624,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-31T15:04:26.562107Z",
-     "iopub.status.busy": "2020-12-31T15:04:26.561226Z",
-     "iopub.status.idle": "2020-12-31T15:04:26.562968Z",
-     "shell.execute_reply": "2020-12-31T15:04:26.563398Z"
+     "iopub.execute_input": "2020-12-31T15:32:55.383954Z",
+     "iopub.status.busy": "2020-12-31T15:32:55.383248Z",
+     "iopub.status.idle": "2020-12-31T15:32:55.385055Z",
+     "shell.execute_reply": "2020-12-31T15:32:55.384690Z"
     },
     "hide-output": false
    },
